gridappsd/templates/viz-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.service.expose: "true"
    kompose.service.type: nodeport
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: viz
  name: viz
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: viz
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -c
        kompose.service.expose: "true"
        kompose.service.type: nodeport
        kompose.version: 1.24.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: viz
    spec:
      containers:
        - image: gridappsd/viz:develop
          name: viz
          ports:
            - containerPort: 8082
          resources: {}
      restartPolicy: Always
status: {}
