gridappsd/templates/gridappsd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose convert -c
    kompose.service.expose: "true"
    kompose.service.type: nodeport
    kompose.version: 1.24.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: gridappsd
  name: gridappsd
spec:
  rules:
    - http:
        paths:
        - path: /testpath
          pathType: Prefix
          backend:
            service:
              name: gridappsd
              port:
                number: 61613
status:
  loadBalancer: {}
